--- a/index.html
+++ b/index.html
@@ -2197,10 +2197,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <a href="https://www.linkedin.com/company/user-conf/">
 <i class="fab fa-linkedin" aria-hidden="true"></i>
 </a>
-<a href="https://github.com/MounaBelaid/First-Steps-in-Learning-the-Use-of-Git-and-GitHub-in-RStudio">
-<i class="fab fa-github" aria-hidden="true"></i>
-</a>
-<a href="https://github.com/rstudio/distill" aria-label="Link to source">
+<a href="https://github.com/MounaBelaid/First-Steps-in-Learning-the-Use-of-Git-and-GitHub-in-RStudio" aria-label="Link to source">
 <i class="fab fa-github" aria-hidden="true"></i>
 </a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
