--- a/slides/Slides.html
+++ b/slides/Slides.html
@@ -227,7 +227,7 @@ template: question
 --
 
 .pull-left-narrow[
-.center[&lt;img src="img/Github.png" width="50%"/&gt;]]
+.center[&lt;img src="img/github.png" width="50%"/&gt;]]
 .pull-right-wide[### .black[GitHub is the most popular hosting service for collaborating on code using Git. Other hosting services include Bitbucket, and Gitlab.]]
 
 --
