--- a/index.html
+++ b/index.html
@@ -1944,7 +1944,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   /* Change bullets */
   ul > li::marker {
     font-size: 1.125em;
-    color: #e5bf00;
+    color: #2167ba;
   }
 
   /* Change link appearance */
