--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
 
   <!--radix_placeholder_meta_tags-->
-  <title>First Steps in Learning the Use of Git &amp; Github in RStudio: First Steps in Learning the Use of Git &amp; GitHub in RStudio</title>
+  <title>First Steps in Learning the Use of Git &amp; GitHub in RStudio</title>
 
   <meta property="description" itemprop="description" content="Getting familiar with the use of Git &amp; GitHub in RStudio"/>
 
@@ -99,15 +99,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <meta name="article:author" content="Mouna Belaid"/>
 
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
-  <meta property="og:title" content="First Steps in Learning the Use of Git &amp; Github in RStudio: First Steps in Learning the Use of Git &amp; GitHub in RStudio"/>
+  <meta property="og:title" content="First Steps in Learning the Use of Git &amp; GitHub in RStudio"/>
   <meta property="og:type" content="article"/>
   <meta property="og:description" content="Getting familiar with the use of Git &amp; GitHub in RStudio"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:site_name" content="First Steps in Learning the Use of Git &amp; Github in RStudio"/>
+  <meta property="og:site_name" content="First Steps in Learning the Use of Git &amp; GitHub in RStudio"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
-  <meta property="twitter:title" content="First Steps in Learning the Use of Git &amp; Github in RStudio: First Steps in Learning the Use of Git &amp; GitHub in RStudio"/>
+  <meta property="twitter:title" content="First Steps in Learning the Use of Git &amp; GitHub in RStudio"/>
   <meta property="twitter:description" content="Getting familiar with the use of Git &amp; GitHub in RStudio"/>
 
   <!--/radix_placeholder_meta_tags-->
@@ -2186,7 +2186,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <header class="header header--fixed" role="banner">
 <nav class="distill-site-nav distill-site-header">
 <div class="nav-left">
-<a href="index.html" class="title">First Steps in Learning the Use of Git &amp; Github in RStudio</a>
+<a href="index.html" class="title">First Steps in Learning the Use of Git &amp; GitHub in RStudio</a>
 </div>
 <div class="nav-right">
 <a href="https://user2022.r-project.org/">useR! 2022, The R User Conference</a>
